--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Profesional Skills</h2>
+                        <h2 class="skills__subtitle">Professional Skills</h2>
                         <p class="skills__text">Being a Full Stack Developer, I have worked on Server Side Technolgies predominently on Java also on Mainframes, and also worked on UI using JavaScript, ReactJS, HTML5, CSS3 and BootStrap4</p>
 
                         <div class="skills__data">
